--- a/app/src/main/res/drawable/button_icon_background_selector.xml
+++ b/app/src/main/res/drawable/button_icon_background_selector.xml
@@ -1,6 +1,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Trạng thái khi button được nhấn -->
-    <item android:drawable="@drawable/button_icon_background_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/button_icon_background_pressed" android:state_pressed="true"
+        android:state_focused="true"
+       android:state_selected="true"
+
+        />
     <!-- Trạng thái mặc định -->
     <item android:drawable="@drawable/button_icon_background_default" />
 </selector>
