--- a/app/src/main/res/drawable/ic_clear.xml
+++ b/app/src/main/res/drawable/ic_clear.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="25dp"
-    android:height="25dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+    android:width="800dp"
+    android:height="800dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
   <path
-      android:pathData="M38,12.83 L35.17,10 24,21.17 12.83,10 10,12.83 21.17,24 10,35.17 12.83,38 24,26.83 35.17,38 38,35.17 26.83,24z"
-      android:fillColor="#ffffff"/>
+      android:pathData="m7,2c-0.832,0 -1.559,0.344 -2.293,0.781s-1.465,1.004 -2.129,1.598c-0.66,0.598 -1.254,1.223 -1.707,1.797c-0.227,0.289 -0.418,0.563 -0.57,0.836c-0.152,0.277 -0.301,0.531 -0.301,0.988s0.148,0.711 0.301,0.984c0.152,0.277 0.344,0.551 0.57,0.836c0.453,0.578 1.047,1.203 1.707,1.797c0.664,0.598 1.395,1.164 2.129,1.602s1.461,0.781 2.293,0.781h6c1.645,0 3,-1.355 3,-3v-6c0,-1.645 -1.355,-3 -3,-3zM8,5c0.266,0 0.52,0.105 0.707,0.293l1.293,1.293l1.293,-1.293c0.188,-0.188 0.441,-0.293 0.707,-0.293s0.52,0.105 0.707,0.293c0.391,0.391 0.391,1.023 0,1.414l-1.293,1.293l1.293,1.293c0.391,0.391 0.391,1.023 0,1.414s-1.023,0.391 -1.414,0l-1.293,-1.293l-1.293,1.293c-0.391,0.391 -1.023,0.391 -1.414,0s-0.391,-1.023 0,-1.414l1.293,-1.293l-1.293,-1.293c-0.391,-0.391 -0.391,-1.023 0,-1.414c0.188,-0.188 0.441,-0.293 0.707,-0.293zM8,5"
+      android:fillColor="#2e3436"/>
 </vector>
