--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -539,6 +539,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/layout_change_pin"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp">
 
