--- a/app/src/main/res/layout/password_layout.xml
+++ b/app/src/main/res/layout/password_layout.xml
@@ -1,29 +1,27 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutPassword"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2ecc71"
-    android:gravity="center"
+
     android:orientation="vertical">
 
     <RelativeLayout
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:id="@+id/layoutToolbarPassWord"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="25dp"
         android:layout_marginRight="10dp"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/ic_finger" />
 
         <ImageView
@@ -31,22 +29,18 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_password" />
+            android:src="@drawable/ic_pin_password" />
 
 
     </RelativeLayout>
 
     <LinearLayout
+        android:layout_marginTop="60dp"
         android:id="@+id/layoutNameApp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutToolbarPassWord">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/img_iconApp"
@@ -70,194 +64,190 @@
             android:inputType="numberPassword"
             android:textSize="30sp" />
 
+        <LinearLayout
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:orientation="horizontal">
+
+            <TableLayout
+                android:id="@+id/tableLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TableRow>
+
+                    <Button
+                        android:id="@+id/btn1"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:padding="16dp"
+                        android:onClick="onNumberClick"
+                        android:text="1"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+
+                    <Button
+                        android:id="@+id/btn2"
+                        android:onClick="onNumberClick"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:padding="16dp"
+                        android:text="2"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+
+                    <Button
+                        android:onClick="onNumberClick"
+                        android:id="@+id/btn3"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_weight="1"
+                        android:padding="16dp"
+                        android:text="3"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="10dp">
+
+                    <Button
+                        android:onClick="onNumberClick"
+
+                        android:id="@+id/btn4"
+
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:padding="16dp"
+                        android:text="4"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+
+                    <Button
+                        android:onClick="onNumberClick"
+
+                        android:id="@+id/btn5"
+
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:padding="16dp"
+                        android:gravity="center"
+                        android:text="5"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+
+                    <Button
+                        android:id="@+id/btn6"
+                        android:onClick="onNumberClick"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_weight="1"
+                        android:padding="16dp"
+                        android:gravity="center"
+                        android:text="6"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="10dp">
+
+                    <Button
+                        android:id="@+id/btn7"
+                        android:onClick="onNumberClick"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:padding="16dp"
+                        android:gravity="center"
+                        android:text="7"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+
+                    <Button
+                        android:id="@+id/btn8"
+                        android:onClick="onNumberClick"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                       android:text="8"
+                        android:padding="16dp"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+
+                    <Button
+                        android:id="@+id/btn9"
+                        android:onClick="onNumberClick"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:padding="16dp"
+                        android:text="9"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+                </TableRow>
+
+                <TableRow android:layout_marginTop="10dp">
+
+                    <Button
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="4dp"
+                        android:layout_weight="1"
+                        android:enabled="false"
+                        android:gravity="center"
+                        android:padding="18dp"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/btn0"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="4dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:padding="16dp"
+                        android:onClick="onNumberClick"
+                        android:text="0"
+                        android:textColor="@color/white"
+                        android:textSize="23sp" />
+
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btnClear"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginRight="4dp"
+                        android:onClick="onClearClick"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:padding="16dp"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        app:icon="@drawable/ic_clear"
+                        app:iconGravity="textStart"
+                        app:iconSize="23sp" />
+
+                </TableRow>
+
+            </TableLayout>
+
+            <com.andrognito.patternlockview.PatternLockView
+                android:id="@+id/pattern_lock_view"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
+                android:layout_centerInParent="true"
+                app:correctStateColor="#44bd32"
+                app:wrongStateColor="#e84118" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-
-    <com.andrognito.patternlockview.PatternLockView
-        android:id="@+id/pattern_lock_view"
-        android:layout_width="350dp"
-        android:layout_height="360dp"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="60dp"
-        app:correctStateColor="#44bd32"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:wrongStateColor="#e84118" />
-
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TableRow android:layout_marginTop="20dp">
-
-            <Button
-                android:id="@+id/btn1"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:layout_weight="1"
-                android:padding="18dp"
-                android:text="1"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <Button
-                android:id="@+id/btn2"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:layout_weight="1"
-                android:padding="18dp"
-                android:text="2"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <Button
-                android:id="@+id/btn3"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:layout_weight="1"
-                android:padding="18dp"
-                android:text="3"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="20dp">
-
-            <Button
-                android:id="@+id/btn4"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:padding="18dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="4"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <Button
-                android:id="@+id/btn5"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:padding="18dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="5"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <Button
-                android:id="@+id/btn6"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:padding="18dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="6"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-        </TableRow>
-
-        <TableRow android:layout_marginTop="15dp">
-
-            <Button
-                android:id="@+id/btn7"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:padding="18dp"
-                android:text="7"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <Button
-                android:id="@+id/btn8"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:padding="18dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="8"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <Button
-                android:id="@+id/btn9"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:padding="18dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="9"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-        </TableRow>
-
-        <TableRow android:layout_marginTop="15dp">
-
-            <Button
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:enabled="false"
-                android:gravity="center"
-                android:padding="25dp"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <Button
-                android:id="@+id/btn0"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:padding="18dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="0"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-            <Button
-                android:drawableTint="@color/white"
-                android:tint="@color/white"
-                android:backgroundTint="@color/white"
-                android:id="@+id/btn_clear"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="7dp"
-                android:padding="18dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_icon_background_selector"
-                android:gravity="center"
-                android:textColor="@color/white"
-                android:textSize="28sp" />
-
-        </TableRow>
-
-    </TableLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
