--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -333,6 +333,7 @@
 
 
                     <LinearLayout
+                        android:id="@+id/layout_relockApp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -341,7 +342,7 @@
                             android:id="@+id/tv_RelockApp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Fingerprint"
+                            android:text="Relock App"
                             android:textSize="17sp" />
 
 
